--- a/StrategyCalculator/StrategyCalculator/StrategyCalculator.csproj
+++ b/StrategyCalculator/StrategyCalculator/StrategyCalculator.csproj
@@ -8,4 +8,10 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="View\Controls\" />
+  </ItemGroup>
+
+  <ProjectExtensions><VisualStudio><UserProperties /></VisualStudio></ProjectExtensions>
+
 </Project>
