--- a/grpc/c#/server/server.csproj
+++ b/grpc/c#/server/server.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
     <PackageReference Include="Google.Protobuf" Version="3.26.1" />
     <PackageReference Include="Grpc" Version="2.46.6" />
+    <PackageReference Include="Grpc.Reflection" Version="2.62.0" />
     <PackageReference Include="Grpc.Tools" Version="2.62.0">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -19,6 +20,24 @@
     <ItemGroup>
 		<Protobuf Include="../*.proto" OutputDIr="%(RelativePath)models/" />
 	</ItemGroup>
+
+    <ItemGroup>
+      <None Remove="ssl\ca.crt" />
+      <None Remove="ssl\server.crt" />
+      <None Remove="ssl\server.key" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <EmbeddedResource Include="ssl\ca.crt">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </EmbeddedResource>
+      <EmbeddedResource Include="ssl\server.crt">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </EmbeddedResource>
+      <EmbeddedResource Include="ssl\server.key">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </EmbeddedResource>
+    </ItemGroup>
 
     <ItemGroup>
       <Folder Include="models\" />
