--- a/grpc/java/PricingService/.project
+++ b/grpc/java/PricingService/.project
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>grpc_test</name>
-	<comment>Project grpc_test created by Buildship.</comment>
+	<name>PricingService</name>
+	<comment>Project PricingService created by Buildship.</comment>
 	<projects>
 	</projects>
 	<buildSpec>
