--- a/grpc/java/PricingService/lib/build.gradle
+++ b/grpc/java/PricingService/lib/build.gradle
@@ -8,71 +8,35 @@
 
 plugins {
     // Apply the java-library plugin for API and implementation separation.
-    id 'java-library'
-    id 'application'
-    id 'idea'
-    id 'com.google.protobuf' version '0.9.4'
+    //id 'java-library'
+	id 'java'
+	id 'application'
+	id "com.google.protobuf" version "0.9.4"
 }
 
 repositories {
-    // Use Maven Central for resolving dependencies.
-    mavenCentral()
+    jcenter()
 }
 
-def grpcVersion = '1.65.0-SNAPSHOT' // CURRENT_GRPC_VERSION
-def protobufVersion = '3.25.1'
-def protocVersion = protobufVersion
-
 dependencies {
-    implementation "io.grpc:grpc-protobuf:${grpcVersion}"
-    implementation "io.grpc:grpc-services:${grpcVersion}"
-    implementation "io.grpc:grpc-stub:${grpcVersion}"
-    
-    implementation "com.google.protobuf:protobuf-java-util:${protobufVersion}"
-    
-    runtimeOnly "io.grpc:grpc-netty-shaded:${grpcVersion}"
-
-    testImplementation "io.grpc:grpc-testing:${grpcVersion}"
-    testImplementation "io.grpc:grpc-inprocess:${grpcVersion}"
-    
-    // Use JUnit Jupiter for testing.
-    testImplementation 'org.junit.jupiter:junit-jupiter:5.9.1'
-
-    // This dependency is exported to consumers, that is to say found on their compile classpath.
-    api 'org.apache.commons:commons-math3:3.6.1'
-
-    // This dependency is used internally, and not exposed to consumers on their own compile classpath.
-    implementation 'com.google.guava:guava:31.1-jre'
+    implementation 'io.grpc:grpc-netty-shaded:1.23.0'
+    implementation 'io.grpc:grpc-protobuf:1.23.0'
+    implementation 'io.grpc:grpc-stub:1.23.0'
+    implementation 'javax.annotation:javax.annotation-api:1.3.2'
 }
 
 protobuf {
-    protoc { artifact = "com.google.protobuf:protoc:${protocVersion}" }
-    plugins {
-        grpc { artifact = "io.grpc:protoc-gen-grpc-java:${grpcVersion}" }
+  protoc {
+    artifact = "com.google.protobuf:protoc:3.9.0"
+  }
+  plugins {
+    grpc {
+      artifact = 'io.grpc:protoc-gen-grpc-java:1.23.0'
     }
-    generateProtoTasks {
-        all()*.plugins { grpc {} }
+  }
+  generateProtoTasks {
+    all()*.plugins {
+      grpc {}
     }
-}
-
-sourceSets {
-    main {
-        java {
-            srcDirs 'build/generated/source/proto/main/grpc'
-            srcDirs 'build/generated/source/proto/main/java'
-        }
-    }
-}
-
-
-// Apply a specific Java toolchain to ease working on different environments.
-java {
-    toolchain {
-        languageVersion = JavaLanguageVersion.of(17)
-    }
-}
-
-tasks.named('test') {
-    // Use JUnit Platform for unit tests.
-    useJUnitPlatform()
-}
+  }
+ }
